--- a/source/_posts/2024年终总结.md
+++ b/source/_posts/2024年终总结.md
@@ -96,37 +96,52 @@ cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA9ec6e766c3f0df3108fd
 
 <img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA79a5fd0efc840d7d3e2d8c54960002bc.jpg" width=300 />
 
-在线上还是比线下放得开，从 10 号之后，我们基本上每天都能说上几句话。从小时候的趣事聊到对现在万事万物的看法，感觉又像回到了以前在被窝里偷偷聊天的时候了。该怎么做呢？其实我还是很纠结，再和咨询师聊的时候，她说听从自己的内心就好了。
+分别之后就从线下转回了线上。我们都是超级 I 人，在线上聊天还是比线下放得开多了。从 10 号之后，我们基本上每天都能聊不少东西，从小时候的事情聊到对现在万事万物的看法，感觉又像回到了以前晚上躲在被窝里偷偷聊天的时候了。我知道了许许多多的遗憾，因为各种各样的不凑巧，我们没能在过去的几年里有所接触。我知道了他在 2022 年才看到了我在 2020 年的留言，也知道了六年前种种事情的原委。而对于我所作的那件无法被原谅的事，也已经被他的家人理解为了小时候不懂事+压力太大所做出的行径，被如此轻易地谅解了。
 
-所以，
+在这段时间的接触里我也认识到了一件事：我也好你也好，果然有些东西是无法轻易被改变的吧，真是白月光的杀伤力。那我到底该怎么做呢？我该放下过去、与过去和解、重新开始生活，还是？我在深圳的这段日子里一直有在和我的咨询师跟进消息，她说，听从自己的内心。你的内心会告诉你答案。
 
-2024/12/17，我和这位认识了九年半的网友又在一块了。感觉这一切好像做梦一样，但又这样真实地发生了，真是不可思议啊。很可惜，我没什么文采，只能写这样流水账一样的回忆录了。
+这说的很鸡汤，不过也确实，毕竟只有我自己能作决定，其他人的都是建议。这之后我就没去过咨询了，我感觉我只是无处倾诉。
+
+时间一晃而过，2024/12/17，我和这位认识了九年半的网友又在一块了。从 9/10 到今天，感觉一切好像一场梦，但又是这样的真实，真是不可思议啊。到 2025 年就是我们认识的第十年了，可惜我呀没什么文采，对于过去的这几年我只能写这样流水账一样的回忆录了。
 
 ---
 
-那么今年除了这件事之外还做了什么呢？
+感谢大家看完青春狗血爱情连续剧。那么今年除了这件事之外还发生了什么呢？
 
-我在港理上学，一月的时候完成了游戏设计课的作业《Ape Evolution》，可以在我的itch上玩到。
+我在港理上学，一月的时候完成了游戏设计课的作业《**Ape Evolution**》，可以在我的itch上玩到，欢迎大家来体验！这个游戏的本质是我用来测试 JSON 数据导入功能的，一些 UX 做的挺拉的（比如看不到 apes 的各项数值），玩起来可能会有点摸不着头脑：
 
 <iframe frameborder="0" src="https://itch.io/embed/2455630" width="552" height="167"><a href="https://guinytime.itch.io/ape-evolution">Ape Evolution by Guinyの时光</a></iframe>
 
-寒假的时候玩了《Ynglet》，发现程序动画和程序音乐原来可以组合出这么有趣的效果，我决定在之后的项目中做一些这方面的尝试（结果并没有）。
+寒假的时候玩了《Ynglet》，发现程序动画和程序音乐可以组合出非常有趣的效果。我完全没理解 Ynglet 想表达什么，这是一个非常**意识流**的游戏，看起来就像...一个单细胞生物在不同的环境（关卡）间穿梭，为了找到其他走失的小生物们。玩完之后我决定在之后的项目中做一些程序化生成方面的尝试，结果并没有时间。
 
-三月开始，我进入了准备秋招的阶段。这段时间我看了不少算法、计网、OS相关的内容，同时毕设也进入了原型构建的阶段。直到七月份我都在和毕设掰头，投递完腾讯和indie nova两个比赛之后，我终于可以歇息一下继续准备秋招的事情了。毕设最后入围了腾讯游戏创作大赛的决赛，这对我来说已经是很棒的结果了。
+二月底，我们去参加了 2024 GGJHK 的线下活动。活动只有48小时，所以我们紧锣密鼓地敲定了设计方案，接着在楼里开始通宵开发。晚上大楼居然有宵禁，负责巡逻的阿姨让我们去其他地方，但我们设备太多了实在不好跑路，所以就偷偷继续呆在教室里...等听到脚步声的时候我们全躲在桌子底下不敢出声，好在没被发现，但这段经历真的太好笑了。第二天我们去位于数码港的线下会场（差点迟到了），经过中午两个小时的折腾，下午公布结果时主持人说我们拿了**最佳竞技游戏奖**！这是我第一次在比赛中拿奖，实在是感动落泪，由衷感谢一起通宵赶工的队友们，是大家的创意和努力一同缔造了这个结果。
 
-秋招很快到来了，但其实我当时准备的还不是很充分，加上简历准备的有一些问题，所以笔试和面试的结果并不理想。我的秋招一直持续到了十二月，期间虽然拿了 5 个offer，但三个都是微信小游戏，最后还是听了学长的建议没去，打算再看看机会。
+三月开始，我进入了秋招的准备阶段。经历过 23 届秋招的教训，这段时间我看了不少算法、计网、OS相关的内容，与此同时毕设也进入了迭代和构建的阶段。这段时间一直到九月份我都可以用“**忙碌无比**”来形容，秋招和毕设两手抓，每天都泡在图书馆。九月底投递完腾讯和 indie nova 两个比赛之后，我终于可以歇息一下毕设的事全心准备秋招了，此时秋招也拉开了帷幕。我挺后悔没有在寒假去实习的，因为没有特别对口的实习的缘故，我被很多游戏厂商拒之门外（明说的有三家，更多是海笔之后简历拒）。其中最可惜的应该是上海某家二游厂商了吧，二面看到我没有客户端的实习之后十分钟面完就把我拒了TT（是真想去啊）。
 
-然后，今年就要结束了。2024 对我来说是比较忙碌的一年，也是充满变化的一年。去年没有给自己设立什么目标，今年一路走下来有点浑浑噩噩的，今年开始我要给自己立下一些任务了：
+十月得知毕设入围了腾讯游戏创作大赛的决赛，虽然最后没能去到武汉线下答辩，但对我来说也已经是很棒的结果了！
 
-1. 找到一份好工作（在六月份之前）
-2. 阅读 C++ Primer，好好学习一下 C++
-3. 写至少八篇技术博客
-4. 拆解学习一个好的工业化游戏系统
-5. 学习性能优化的手段
-6. 学习游戏设计思维
-7. 阅读至少3本书
-8. 把多邻国下回来学英语
+我的秋招一直持续到了十二月，最终斩获了 5 个 offer，都是游戏客户端开发。5 个 offer 中有 3 个是微信小游戏项目，其中一家虽然开的很高，但技术栈（Cocos+TS）和发展方向（小程序）与自身不相符所以拒绝了。另外两家都在厦门，但综合来看薪资待遇偏低，加上是预研项目存在不稳定因素，所以忍痛拒绝了。另一家的项目类型就有点古早了，位置在广州离家太远，薪资可能也不会给到太高，所以放弃最后的主管面了。最后剩下的一个 offer 是自研引擎的游戏开发，考虑到后续不方便继续找工作，还是拒掉了。自此秋招结束，春招再战！
 
-明年的十二月，我会再发一篇文章回头看看这一切的完成情况的！希望回首的时候，我会感叹“哇，今年做了这么多事情啊”，而不是挠头思考我今年都干了啥。
+作为留学生我十月中旬就毕业了，没有办法像大家一样去提前实习或者签三方再解，也没有办法在寒假刷实习。春招注定是一场艰难的战役，希望能上岸成功。
 
-共勉！
+然后，今年就要结束了。2024 对我来说是收获与忙碌并存的一年，也是魔幻而充满戏剧性的一年。去年并没有给自己设立什么目标（只是一个模模糊糊的“要在秋招找到工作啊”），今年一路走下来感觉有点浑浑噩噩的，说不出来自己到底做了什么，可又确实做了很多。既然今年开始写年终总结，那么我也要给自己立下新的一年需要完成的任务了：
+
+1. 在春招找到一份好工作
+2. 写至少八篇技术博客
+3. 拆解学习一个好的工业化游戏系统
+4. 学习性能优化的tips
+5. 阅读至少 3 本书
+6. 把多邻国下回来学英语
+
+以及一些期许：
+
+- 一点前睡觉
+- 不要吃宵夜
+- 锻炼身体
+- 少吃点外卖，周末自己做做饭
+- 周末多出门走走
+- Passion for game！
+
+明年的十二月，我会再发一篇文章回头看看这一切的完成情况的。希望到明年年终回顾的时候，我会感叹“哇，今年做了这么多事情啊”，而不是挠头思考我今年都干了啥。哈哈，碌碌无为某种意义上也是近几年的常态了，确实该改改了。
+
+愿我们都能摆脱冷气向上走，做我们所热爱的事。
