点击事件，另外将笔记部分的文件结构调整了一下

--- a/study_notes/source/_posts/post_计网/物理层.md
+++ b/study_notes/source/_posts/post_计网/物理层.md
@@ -43,6 +43,16 @@ hidden: true
 {% endnote %}
 
 ---
+**速率 & 波特**
+- **码元**（Symbol）：通信信号中传输的基本单位，例如二进制中的一个比特，或者一个振幅、频率、相位的变化。
+- **波特**（Baud）：每秒传输的**码元**数，衡量信号的调制速度。
+- **码元传输速率** = 码元速率 = 波特速率 = 符号速率 = 调制速率
+    表示单位时间内数字通信系统所传输的**码元**个数（也可以成为脉冲个数或信号变化的次数），单位是波特。
+- **信息传输速率** = 信息速率 = 比特率
+    表示单位时间内数字通信系统所传输的**二进制码元**个数（比特数），单位是比特每秒（b/s）。
+- **波特率**
+    波特率 = 比特率/每码元所含比特数
+    即每秒可能发生的信号变化次数。
 
 {% note success **时延计算** %}
 通常来说，题目会给定数据总量和网络速率，并求发送时延的值。
@@ -66,6 +76,10 @@ hidden: true
 4 \* log(1 + 1000) = 40 kbps
 {% endnote %}
 
+{% note success **计算相位的幅值** %}
+通常来说，题目会给定波特率 `B`、数据传输速率 `C` 和相位数，求每种相位有多少种幅值。
+假设 `B` = 1000，`C` = 4000bps，由 C = B log2L得 L = 16。当相位数为 4 时，每个相位有 16 / 4 = 4 个幅值。
+{% endnote %}
 ---
 
 {% note danger **TDM区分数据源** %}
