--- a/study_notes/source/_posts/post_计网/物理层.md
+++ b/study_notes/source/_posts/post_计网/物理层.md
@@ -77,8 +77,8 @@ hidden: true
 {% endnote %}
 
 {% note success **计算相位的幅值** %}
-通常来说，题目会给定波特率 `B`、数据传输速率 `C` 和相位数，求每种相位有多少种幅值。
-假设 `B` = 1000，`C` = 4000bps，由 C = B log2L得 L = 16。当相位数为 4 时，每个相位有 16 / 4 = 4 个幅值。
+通常来说，题目会给定波特率 `B`、数据传输速率 `R` 和相位数 `m`，求每种相位有多少种幅值。
+假设 `B` = 1000，`R` = 4000bps，由 R = B log2(mn)得 m * n = 16。当相位数 `m` 为 4 时，每个相位有 16 / 4 = 4 个幅值。
 {% endnote %}
 ---
 
