--- a/study_notes/source/_posts/操作系统.md
+++ b/study_notes/source/_posts/操作系统.md
@@ -10,7 +10,7 @@ comments: false
 B站王道考研操作系统系列课程的相关笔记
 
 <!-- more -->
-[操作系统(1) 计算机系统概述](/next/操作系统-1-计算机系统概述/)
+[操作系统(1) 计算机系统概述](/next/post_OS/操作系统-1-计算机系统概述/)
 操作系统(2) 进程与线程
 操作系统(3) 内存管理
 操作系统(4) 文件管理
@@ -18,8 +18,8 @@ B站王道考研操作系统系列课程的相关笔记
 
 ---
 
-[计算机系统概述练习记录](/next/操作系统概述)
-[进程与线程练习记录](/next/进程与线程)
-[内存管理练习记录](/next/内存管理)
-[文件管理练习记录](/next/文件管理)
-[I/O管理练习记录](/next/I-O管理)
+[计算机系统概述练习记录](/next/post_OS/操作系统概述)
+[进程与线程练习记录](/next/post_OS/进程与线程)
+[内存管理练习记录](/next/post_OS/内存管理)
+[文件管理练习记录](/next/post_OS/文件管理)
+[I/O管理练习记录](/next/post_OS/I-O管理)
