--- a/study_notes/source/_posts/post_OS/操作系统概述.md
+++ b/study_notes/source/_posts/post_OS/操作系统概述.md
@@ -11,3 +11,38 @@ hidden: true
 **命令解释程序**。
 这是用户空间中的一个应用程序，它负责解析用户命令并通过系统调用与操作系统交互。
 {% endnote %}
+
+{% note info **操作系统提供的命令接口类型** %}
+**联机用户接口**和**脱机用户接口**。
+- 联机用户接口：windows 的 `cmd` 命令行，输入命令返回结果。
+- 脱机命令接口：`.bat` 批处理文件，点击后自动运行
+{% endnote %}
+
+{% note info **开机启动过程** %}
+1. CPU 通电，CS：IP指向FFFF0H
+2. 执行 `JUMP` 指令跳转到 BIOS
+3. 登记 BIOS 中断例程入口地址
+4. 位于 ROM 的 BIOS 自检程序开始自检
+5. 位于硬盘的引导程序开始引导操作系统
+6. 操作系统内核部分被装入 RAM
+{% endnote %}
+
+---
+
+{% note success 时间片/响应时间/进程数计算%}
+给定就绪进程数 `n`、最大响应时间 `t`、时间片长度 `l`，三者之间的关系为：
+$$l = t / n$$
+{% endnote %}
+---
+
+**中断**是由**硬件**完成的，硬件自动实现程序状态字（PSW）的改变。
+
+系统调用就是广义指令。
+
+{% note danger **操作系统与用户通信的接口通常不包括？** %}
+**缓存管理指令**。缓存由操作系统管理，对用户是透明的，操作系统不提供管理系统缓存的系统调用。
+{% endnote %}
+
+{% note danger **操作系统必须提供的功能** %}
+**中断处理**。没有中断就没有多道程序，也就没有并发，因此是最基础的一项功能。
+{% endnote %}
