--- a/study_notes/source/_posts/post_计网/传输层.md
+++ b/study_notes/source/_posts/post_计网/传输层.md
@@ -25,6 +25,14 @@ TCP首部长度20B，UDP首部长度8B
 IP首部长度20B
 {% endnote %}
 
+{% note info **哪四种情况TCP会发送RST包** %}
+1. 端口未打开
+2. 请求超时
+3. 提前关闭
+4. 在一个已关闭的socket上收到数据
+5. 用于拒绝一个非法连接     
+{% endnote %}
+
 ---
 
 {% note success **慢开始门限`ssthresh`与拥塞窗口`cwnd`** %}
