--- a/study_notes/source/_posts/post_计网/应用层.md
+++ b/study_notes/source/_posts/post_计网/应用层.md
@@ -11,6 +11,19 @@ hidden: true
 匿名FTP的用户名一般是anonymous。
 {% endnote %}
 
+{% note info **构成协议的三要素** %}
+1. **语义**：做什么
+2. **语法**：怎么做
+3. **时序**（定时规则/同步）：做的顺序
+{% endnote %}
+
+{% note info **http2.0** %}
+- 所有http请求都建立在一个TCP请求上，实现多路复用
+- 可以给请求添加优先级
+- 服务器主动推送 server push
+- HTTP2的头部会减小，从而减少流量传输
+{% endnote %}
+
 ---
 
 {% note success **域名服务器有哪些** %}
