--- a/study_notes/source/_posts/post_计网/物理层.md
+++ b/study_notes/source/_posts/post_计网/物理层.md
@@ -6,10 +6,21 @@ tags:
 categories: 计算机网络
 hidden: true
 ---
+{% note info **曼彻斯特编码与差分曼彻斯特编码** %}
+曼彻斯特编码看中间：中间从低跳变到高表示0，从高到低表示1
+差分看边缘，边缘有跳变表示0，无跳变表示1
+{% endnote %}
 
 {% note info **物理线路与信道** %}
 - 物理线路：一条物理线路可以复用多条信道
 - 信道：信息通讯的链路，是**单向**的
+{% endnote %}
+
+{% note info **物理接口的特性** %}
+- 机械特性：接口形状、尺寸、针脚数目
+- 电气特性：各条线的电压范围、传输速率、距离限制
+- 功能特性：某一电平的电压意义，每条线的功能
+- 过程特性：不同功能的各种事件可能的出现顺序
 {% endnote %}
 
 {% note info **双绞线的带宽** %}
@@ -33,13 +44,22 @@ hidden: true
 - 分组交换：将报文拆成相同大小的“分组”
     - 数据报：不需要建立连接，每个分组独立选择路由，不保证分组有序到达
     - 虚电路：建立逻辑电路连接，保证分组有序到达，可靠性由网络保证，资源利用率高，占用线路开销小，存在**延迟**（虚电路建立需要时间）
-- 报文交换：完整的报文进行传输，没有被拆成小块。在路由上存储-转发
-- 电路交换：完整的报文进行传输，没有被拆成小块。在通信双方之间建立连接通道。在**连接建立成功之后**双方的通信活动才能开始。不存在存储-转发，线路利用率低，不利于差错控制
+- 报文交换：完整的报文进行传输，没有被拆成小块。在路由上存储-转发，**不能按时到达**
+- 电路交换：拆成分组按需到达。在通信双方之间建立连接通道。在**连接建立成功之后**双方的通信活动才能开始。不存在存储-转发，线路利用率低，不利于差错控制
 {% endnote %}
 
 {% note info **不同的TDM** %}
 - 同步TDM：将时间划分为固定时长的时间片，每个时间片分配给不同用户或数据流。
 - 统计/异步TDM：按需要动态分配时间片，每个时间片必须要用户的地址信息，可以按照字节、帧或位进行复用，需要解决传输过程中的**成帧和同步问题**。
+{% endnote %}
+
+{% note info **通信方式与数据传输方式** %}
+- **通信方式**：
+    - 同步：比特
+    - 异步：字符
+- **数据传输方式**：
+    - 串行：逐个比特（慢但距离长）
+    - 并行：多个比特（快但距离短）
 {% endnote %}
 
 ---
@@ -53,6 +73,12 @@ hidden: true
 - **波特率**
     波特率 = 比特率/每码元所含比特数
     即每秒可能发生的信号变化次数。
+- **比特率**
+    比特率 = 波特率 * log2N
+
+**最大传输速率**
+- **有噪声**：$C = 2W \cdot log_2{(M)}$
+- **无噪声**：$C = W \cdot log_2{(1 + SNR)}$
 
 {% note success **时延计算** %}
 通常来说，题目会给定数据总量和网络速率，并求发送时延的值。
@@ -64,8 +90,8 @@ hidden: true
 {% note success **无噪声最大数据传输速率计算** %}
 通常来说，题目会给定信道带宽`w`和编码状态`v`，问**无噪声条件**下信道的最大数据传输速率。此时可以用香农定理解决，
 **例如**：某信道带宽10kHz，采用32种不同的物理状态来表示数据，无噪声条件下信道的最大数据传输速率是多少？
-代入香农定理 2 \* w \* log(2 \* v)，即：
-2 \* 10 \* log(2 \* 32) = 100 kbps
+代入香农定理 2 \* w \* log2(v)，即：
+2 \* 10 \* log2(32) = 100 kbps
 {% endnote %}
 
 {% note success **最大数据传输速率计算（有噪声）** %}
@@ -80,6 +106,13 @@ hidden: true
 通常来说，题目会给定波特率 `B`、数据传输速率 `R` 和相位数 `m`，求每种相位有多少种幅值。
 假设 `B` = 1000，`R` = 4000bps，由 R = B log2(mn)得 m * n = 16。当相位数 `m` 为 4 时，每个相位有 16 / 4 = 4 个幅值。
 {% endnote %}
+
+{% note success **坐标圈求数据传输率** %}
+通常来说，题目会给定波特率 `B`、坐标圈的坐标点，问在线路上可达到的数据传输率。
+根据有几个点的 `y` 坐标不同，得出码元有几个离散值，除以 `2` 即是几个比特位。
+传输率 = `B` * 比特位。
+{% endnote %}
+
 ---
 
 {% note danger **TDM区分数据源** %}
@@ -94,4 +127,14 @@ hidden: true
 
 {% note danger **5-4-3原则** %}
 10M以太网遵循5-4-3原则，即划分为5个网段、用4个中继器连接、允许其中3个网段有设备（其余2个网段只是传输距离的延长）。
+{% endnote %}
+
+{% note danger **调制与解调** %}
+- 调制：数字 -> 模拟
+- 解调：模拟 -> 数字
+{% endnote %}
+
+{% note danger **基带与宽带** %}
+- 基带：数字
+- 宽带：模拟
 {% endnote %}
