--- a/study_notes/source/_posts/post_计网/物理层.md
+++ b/study_notes/source/_posts/post_计网/物理层.md
@@ -138,3 +138,8 @@ hidden: true
 - 基带：数字
 - 宽带：模拟
 {% endnote %}
+
+{% note danger **FDM** %}
+FDM 的前提是传输介质的可用带宽大于多路给定信号所需带宽的总和。
+对于模拟信号，可以将 **TDM** 和 **FDM** 组合起来使用。
+{% endnote %}
