--- a/study_notes/source/_posts/post_计网/网络层.md
+++ b/study_notes/source/_posts/post_计网/网络层.md
@@ -63,6 +63,12 @@ ICMP被封装在IP数据报的数据部分。
 当主机号不同时代表两个ip不在一个网络里，需要借助路由器进行通信。
 {% endnote %}
 
+{% note success **能接收目的地址的IP分组的最大主机数** %}
+在子网192.168.4.0/30中，能接收目的地址为192.168.4.3的IP分组的最大主机数是？
+
+首先分析192.168.4.0/30这个网络，主机号只占2位，地址范围为192.168.4.0～192.168.4.3，主机号全1时，即192.168.4.3是广播地址，主机号全0表示本网络本身，不作为主机地址使用，因此可容纳4-2=2个主机。
+{% endnote %}
+
 ---
 
 {% note danger **IP协议是无连接不可靠的服务** %}
