--- a/study_notes/source/_posts/post_计网/应用层.md
+++ b/study_notes/source/_posts/post_计网/应用层.md
@@ -36,6 +36,12 @@ hidden: true
 - HTTP2的头部会减小，从而减少流量传输
 {% endnote %}
 
+{% note info **WebSocket 与 socket** %}
+webSocket 是**基于 TCP** 的**应用层协议**，通过 HTTP 协议升级建立全双工通信连接，可以建立持久连接。
+Socket 是一组 **API**，不属于基本网络结构，应用于顶层应用层和下一层传输层的接口。
+因此 WebSocket **不是**由 Socket 发展而来的新规范。
+{% endnote %}
+
 ---
 
 {% note success **域名服务器有哪些** %}
