--- a/study_notes/source/_posts/post_计网/网络层.md
+++ b/study_notes/source/_posts/post_计网/网络层.md
@@ -7,6 +7,10 @@ categories: 计算机网络
 hidden: true
 ---
 
+{% note info **IP数据报的最大长度** %}
+IP数据报首部中的长度字段占用2个字节，即16位。可以表示2^16字节，也就是65535B。
+{% endnote %}
+
 {% note info **异构网络** %}
 异构网络指由**路由器**连接起来的数据链路层和物理层都不相同的网络。网络层的任务之一就是使异构网络实现互联。
 {% endnote %}
@@ -83,4 +87,8 @@ IP层为什么不对数据部分进行差错校验？
 - **优点**：不负责差错检测和纠错，所以可获得较高的传输性能。 
 
 - **缺点**：IP层不负责差错检测，那么错误检测只能在传输层或应用层被发现，使纠正错误的时间增加了。 
+{% endnote %}
+
+{% note danger **一个交换机接收到一帧，其目的地址在它的 MAC 地址表中查不到怎么办** %}
+交换机应该向除了来的那个端口外的所有其它端口转发。
 {% endnote %}
