--- a/source/_posts/2024年终总结.md
+++ b/source/_posts/2024年终总结.md
@@ -4,6 +4,7 @@ date: 2024-12-29 11:31:02
 tags: ['2024','年终总结']
 categories: 年终总结
 cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA9ec6e766c3f0df3108fd9d215123d6de.jpg
+hide: true
 ---
 
 <img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA94b1cafb0a98cc51ea63abdf9ec1c271.png">
