--- a/source/_posts/游戏技术/反作弊.md
+++ b/source/_posts/游戏技术/反作弊.md
@@ -1,10 +1,10 @@
 ---
-title: 游戏反作弊的一些总结
+title: 关于游戏反作弊的一些总结
 tags: ['防作弊','外挂','经验分享']
 categories: 网络同步
 date: 2024-08-03
 updated: 2024-08-04
-cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA18b78b5bb476051702ec829ca037bc84.png
+cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VAa232bd6c35170a9fa5dd6afa95d69d8c.png
 ---
 
 <img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA47750397e3060260d5868f3bb3d87794.png" alt="CF中的外挂" />
