--- a/study_notes/source/_posts/post_OS/操作系统-3-内存管理.md
+++ b/study_notes/source/_posts/post_OS/操作系统-3-内存管理.md
@@ -140,30 +140,73 @@ hidden: true
 <img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA3621ff84941b9d8a06d7a8912ea2fe45.png" />
 <img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA7dd059bd8d6867ce2c47835c1c885a3e.png" />
 
---
+---
 
 **具有快表的地址变换机构**
 
+这里的**快表**指的不是对链表提速的特殊数据结构，而是**联想寄存器**（TLB）。快表是一种**访问速度比内存快很多的高速缓存**（高速缓存被集成在 CPU 内，因此不属于内存），用来存放**最近访问过的页表项的副本**，可以加快地址变换的速度。与此对应，内存中的页表被称为**慢表**。进程切换时，快表的内容会被**清空**（因为对于每个进程来说，它们对应的内存空间是不同的，进程是资源划分的基本单位）。
+
+具有快表的地址变换机构流程图如下：
+
+<img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VAbfa1be8ae41b4b0e56991bedd6a86307.png" />
+<img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA4dd7eaa867dd53de998e4265ee6be095.png" />
+
+由于**局部性原理**，快表的命中率通常可以达到 90% 以上。
+    - **时间局部性**：如果执行了程序中的某条指令，那么不久后这条指令很有可能被再次执行；如果某个数据被访问过，那么不久后该数据很可能再被访问。
+    - **空间局部性**：一旦程序访问了某个存储单元，在不久之后其附近的存储单元也很有可能被访问（因为很多数据在内存中是连续存放的）。
 
 ---
 
 **两级页表**
 
+单级页表可能存在以下两个问题：
+1. 一个页面大小 4kb 的用户进程最多有 $2^{20}$ 页，需要 10 个页框才能装得下整个页表，这样的连续空间对内存来说有点难。
+2. 进程在一段时间内可能只需要访问几个页面就可以正常工作了，没有比喻让整个页表常驻内存。
+由此，引出了**两级页表**的优化。两级页表将页表项离散地存储到内存块中（各级页表的大小不能超过一个页面），再通过建立一张索引表（**页目录表** / **外层页表** / **顶层页表**）来查找各个页表项。
 
+多级页表也有一个很明显的缺点，那就是**访存次数增多**，浪费时间。
 
-#### 基本分段存储管理**
+多级页表划分计算题：
 
+<img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VAe0a0768dfc66fc11e570a93e15c5fb18.png" />
 
+#### 基本分段存储管理
+分段式存储管理类似分页式存储管理，但他们离散分配时使用的基本单位不同。分页使用的是“页”和“页表”，而分段使用的是“段”和“段表”。相较于分页，分段管理更容易实现**信息的共享和保护**。
 
-#### 段页式存储管理**
+- **段**：程序按照**自身逻辑**（例如一个函数）划分出来的地址空间，每个段都有一个**段名**和**段号**（例如 main），使用户编程更方便。段在内存中占据**连续的内存空间**，各个段可以**不相邻**。每个段记录了**段号**和**段内地址偏移**的表。
+    - 段号决定了每个进程可以分为多少个段
+    - 段内地址位数决定了每个段的最大长度。
+- **段表**：由段表项组成的一张表，每个段表项记录了该段在内存中的**段号**、**段长**和**起始地址**（基址）。
 
+分段存储管理的内存地址查找流程如下：
 
+<img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VAdead1973deffbd285056e17b7b7cbf38.png" />
 
+#### 段页式存储管理
+**段页式存储管理**实际上就是分页式管理和分段式管理的结合。回顾分页式管理和分段式管理，我们可以总结出它们的优缺点：
+- **分页式管理**
+    - **优点**：内存空间利用率高，不会产生外部碎片。
+    - **缺点**：不方便按照逻辑模块实现信息的共享和保护。
+- **分段式管理**
+    - **优点**：很方便按照逻辑模块实现信息的共享和保护。
+    - **缺点**：如果段长过大，分配连续空间可能很不方便。分段式管理也可能会产生外部碎片。
 
+二者基本是处在对立面，你的优点即我的缺点，你的缺点即我的优点。既然如此，为什么不将二者合二为一呢？
 
+1. 将进程按逻辑模块分段（例如 main 函数）
+2. 将各段分页（例如每个页面 4kb）
+3. 将页面装入内存块中
 
+可见，在段页式管理中，内存是先分段再分页的，逻辑地址的结构由**段号**、**页号**和**页内地址偏移量**组成。
+- 段号位数决定每个进程可以分为几段
+- 页号位数决定每个段最大能有几页
+- 页内偏移量决定了页面大小、内存块的大小
 
+在索引的管理上，段页式管理也是通过一张表实现的。表中的每项对应一个**段表项**，其中包含了**段号**、**页表长度**、**页表存放块号**（一张页表的起始地址）组成。各个段表项长度相同。一个段表可以对应多张页表（因为一个段表项就可能对应一张独立的页表）。
 
+段页式管理的逻辑地址转换流程如下所示：
+
+<img src="https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA93e8a3158993b938a17c1c7fe0c10a57.png" />
 
 ## 虚拟内存
 
