--- a/study_notes/source/_posts/post_计网/应用层.md
+++ b/study_notes/source/_posts/post_计网/应用层.md
@@ -11,8 +11,12 @@ hidden: true
 匿名FTP的用户名一般是anonymous。
 {% endnote %}
 
+{% note info **DNS 服务的常见资源记录类型** %}
+A记录（主机地址）、CNAME记录（别名）、MX记录（邮件主机）、NS记录（名称服务器）、SOA记录（起始授权机构）、PTR记录（IP反向解析）、SRV记录（MS DNS服务器的活动目录）
+{% endnote %}
+
 {% note info **netstat命令** %}
-可以查看进程监听端口的情况。
+可以查看进程监听端口的情况、网络连接状态（包括传输层链接状态）。
 {% endnote %}
 
 {% note info **iptables** %}
