--- a/study_notes/source/_posts/post_计网/数据链路层.md
+++ b/study_notes/source/_posts/post_计网/数据链路层.md
@@ -39,6 +39,24 @@ hidden: true
 - 令牌传递：**轮询访问**协议，有一种称为令牌的信号在节点之间传递，收到令牌的节点表示授权可以发数据
 {% endnote %}
 
+{% note info **令牌总线与令牌环** %}
+**令牌总线**（Token Bus）是一种采用令牌传递机制的媒体访问控制协议，但其物理拓扑是总线型的，而逻辑上则构造出一个环。网络中的各个节点按照预先定义好的顺序（例如基于地址或其他排序算法）形成一个逻辑环，令牌在这个逻辑环内传递，只有获得令牌的节点才有权限发送数据。
+特点：
+- 访问延迟确定： 由于令牌按照固定的顺序循环传递，每个节点等待令牌的最长延迟是可以预估的，因此适合对延迟要求较高的应用。
+- 适用于重负载环境： 在网络负载较高时，令牌传递可以有效避免碰撞，提高整体传输效率。
+- 支持优先级服务： 某些令牌总线协议允许在令牌中嵌入优先级信息，使得高优先级数据能更快获得传输机会。
+- 维护复杂： 网络拓扑虽然是总线型，但令牌传递需要完成大量的**环维护**工作。
+
+---
+
+**令牌环**（Token Ring）采用的是环形拓扑，网络中各个节点物理上（或逻辑上）构成一个闭合环。在这种网络中，一个特殊的数据帧——令牌在环上不断传递，只有持有令牌的节点才能发送数据帧。发送完成后，节点会释放令牌，供其他节点使用。
+特点：
+1. 确定的访问延迟： 由于令牌在环中循环传递，节点在等待令牌时的延迟是固定和可预测的。
+2. 抗拥塞能力较强： 每个节点只有在获得令牌后才能发送数据，避免了数据碰撞的问题。
+3. 优先级机制： 在一些实现中，可以通过修改令牌的字段来支持数据优先级，从而满足实时性要求。
+4. 环维护： 物理或逻辑环的结构相对简单，但如果环中某个节点或链路故障，可能需要环自我修复或重新配置（需要完成大量的**环维护**工作）。
+{% endnote %}
+
 ---
 
 {% note success **数据链路的滑动窗口** %}
@@ -59,7 +77,7 @@ hidden: true
 在这个协议中，最大窗口是2^(m-1)^ ，其中m为帧的位数。因此，最大发送窗口尺寸为2^3^ = 8。
 {% endnote %}
 
-{% note success **零比特填充法如何组帧** %}
+{% note success **零比特填充法（HDLC）如何组帧** %}
 通常来说，题目会给定接收方收到的帧的比特序列，问原始数据的比特流是多少。
 **例如**：接收方收到的帧的比特序列为0111111010111110101111110，用**零比特填充法**组帧，原始数据的比特流是？
 零比特填充法规定开始和结束加上`01111110`作为标志，同时每遇到5个`1`就自动插入一个0。因此，原始数据为10111111
